--- a/pr_banner/style.css
+++ b/pr_banner/style.css
@@ -123,8 +123,25 @@ main {
     flex-direction: column;
     justify-content: center;
     text-align: center;
+     /* efeito de transição*/
+     transition: background-image 1s ease-in-out
 }
 
+/*Adcionar classes para cada imagem de background
+    A estratégia é substituir essas imagens na linha: background: url(img/bg1.jpg); do mais*/
+
+.bg1 {
+    background: url(img/bg1.jpg);
+}
+
+.bg2 {
+    background: url(img/bg2.jpg);
+}
+
+.bg3 {
+    background: url(img/bg3.jpg);
+}
+ 
 main h1,
 h2 {
     /* efeito de sombra nos textos */
